# djangoproject

./: .gitignore  README.md  db.sqlite3  pyproject.toml
features/: __init__.py  environment.py  polls.feature  polls_journey.feature  question_recently.feature
features/steps/: polls_steps.py
mysite/: settings.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css  style_detail.css  style_results.css
polls/templates/polls/: detail.html  index.html  results.html
